--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Digitalocean</title>
 
     <!-- ------NAV------- -->
+
+  
+</head>
+<body>
+
+      
     <nav>
 
-        <div class="nav_container clearfix">
+        <div class="nav_container clear">
             <div class="logo">
                 <img src="img/logo.png" alt="">
             </div>
@@ -43,8 +48,6 @@
 
 
     </nav>
-</head>
-<body>
     
 </body>
 </html>
