aggiungo colonna hero

--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
                                 <input type="password" class="form_lgr" id="exampleInputPassword1" placeholder="Password">
                                 </div>
                                 <div class="form_btn">
-                                    <button type="submit" class="form_lgr bgd_blue white_txt centred">Create your account</button>
+                                    <button type="submit" class="form_lgr bgd_blue white_txt centred"><a class="white_txt" href="#">Create your account</a></button>
                                 </div>
                                 <div class="form_btn">
-                                    <button type="submit" class="form_lgr bgd_white centred">Sign Up with Google</button>
+                                    <button type="submit" class="btn form_lgr bgd_white centred"><a class="black_txt" href="#">Sign Up with Google</a></button>
+                                    
                                 </div>
                                 <h5 class="centred pdg-20">By signing up you agree to the <a href="#">Terms of service</a></h5>
                             </form>
