--- a/index.html
+++ b/index.html
@@ -151,8 +151,18 @@
                 
             </div>
 
-            <h5 class="pdg-20 centred"><a href="#">View customer stories <i class="fas fa-chevron-right"></i></a></h5>
+            <h4 class="pdg-20 centred"><a href="#">View customer stories <i class="fas fa-chevron-right"></i></a></h4>
 
+        </section>
+
+        <section class="diploy pdg-20 centred container">
+            <h2 class="pdg-20 container">
+                Deploy and scale seamlessly
+            </h2>
+            <p class="pdg-20 container">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ducimus consequuntur sed dolorum nihil reprehenderit ad facilis, non placeat labore voluptates nemo, pariatur dolores eius molestiae quo nostrum sunt totam.
+                
+            </p>
 
 
 
