aggiungo lista sezione deploy

--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
 
         </section>
 
-        <section class="diploy pdg-20 centred container">
+        <!-- deploy -->
+
+        <section class="deploy pdg-20 centred container">
             <h2 class="pdg-20 container">
                 Deploy and scale seamlessly
             </h2>
@@ -163,6 +165,23 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ducimus consequuntur sed dolorum nihil reprehenderit ad facilis, non placeat labore voluptates nemo, pariatur dolores eius molestiae quo nostrum sunt totam.
                 
             </p>
+
+            <div class="deploy_container pdg-20">
+                <div class="row">
+                    <div class="col-4 deploy_container_border_left">
+
+                        <div class="deploy_list">
+                            <li><a class="black_txt" href="#">Deploy</a></li>
+                            <li><a class="black_txt" href="#">Manage</a></li>
+                            <li><a class="black_txt" href="#">Secure</a></li>
+                            <li><a class="black_txt" href="#">Scale</a></li>
+                            <li><a class="black_txt" href="#">Monitor</a></li>
+                        </div>
+                    </div>
+                    <div class="col-4">1</div>
+                    <div class="col-4">1</div>
+                </div>
+            </div>
 
 
 
