aggiungo classi padding

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
             <div class="deploy_container pdg-20">
                 <div class="row">
-                    <div class="col-4 deploy_container_border_left">
+                    <div class="col-4 deploy_container_border_left margin-bottom">
 
                         <div class="deploy_list">
                             <li><a class="black_txt" href="#">Deploy</a></li>
@@ -202,7 +202,7 @@
                                 <p>Get the compute resources you need with Standard or Optimized Droplets</p>
                             </div>
 
-                            <div class="deploy_container_top_bottom_right pdg-10-l">
+                            <div class="deploy_container_bottom_right pdg-10-l">
                                 <img src="img/global.svg" alt="">
                                 <h3 class="pdg-20">One-click apps</h3>
                                 <p>Deploy of any out data center regions around the world</p>
