--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
             <h2 class="pdg-20 container centred">
                 Designed for developers
             </h2>
-            <p class="pdg-20 container centred">
+            <p class="pdg-30 container centred">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ducimus consequuntur sed dolorum nihil reprehenderit ad facilis, non placeat labore voluptates nemo, pariatur dolores eius molestiae quo nostrum sunt totam.
             </p>
 
-            <div class="designed_for_row clearfix pdg-20">
+            <div class="designed_for_row clearfix">
                 <div class="chevron centred">
                     <a href=""><i class="fas fa-chevron-left"></i></a> 
                 </div>
@@ -236,6 +236,18 @@
                 <div class="chevron centred">
                     <a href=""><i class="fas fa-chevron-right"></i></a> 
                 </div>
+            </div>
+
+            <h3 class="centred">Create compute servers in 55 seconds or less</h3>
+            <div class="slider_click clearfix centred">
+                <div class="click_container pdg-10">
+                <div class="click bgd_blue"><a href="#"></a></div>
+                <div class="click "></div>
+                <div class="click"></div>
+                <div class="click"></div>
+                </div>
+                
+
             </div>
 
         </section>
