aggiungo sezione feature

--- a/index.html
+++ b/index.html
@@ -252,6 +252,40 @@
 
         </section>
 
+        <section class="future pdg-20">
+
+            <h3 class="centred pdg-30">The features your business needs</h3>
+
+            <div class="features_item container">
+
+                <div class="row">
+
+                    <div class="col-4 pdg-10-r pdg-30">
+                        <img src="img/pred-pricing.svg" alt="">
+                        <h3 class="pdg-20">Predictable pricing</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia 
+                            illo veniam sint minima hic soluta corporis at dolore et molestiae?</p>
+                        <h4><a href="#">Princing<i class="fas fa-chevron-right pdg-20"></i></a></h4>
+                    </div>
+                    <div class="col-4 pdg-10-r pdg-30">
+                        <img src="img/world-class.svg" alt="">
+                        <h3 class="pdg-20">Predictable pricing</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia 
+                            illo veniam sint minima hic soluta corporis at dolore et molestiae?</p>
+                        <h4><a href="#">Support<i class="fas fa-chevron-right pdg-20"></i></a></h4>
+                    </div>
+                    <div class="col-4 pdg-10-r pdg-30">
+                        <img src="img/reliable-platform.svg" alt="">
+                        <h3 class="pdg-20">Reliable platform</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia 
+                            illo veniam sint minima hic soluta corporis at dolore et molestiae?</p>
+                        <h4><a href="#">Security<i class="fas fa-chevron-right pdg-20"></i></a></h4>
+                </div>
+
+            </div>
+
+        </section>
+
 
 
     </div>
