aggiungo classi colori footer

--- a/index.html
+++ b/index.html
@@ -450,14 +450,14 @@
                     <div class="col-4 logo">
 
                         <img class="pdg-10" src="img/logo-small.svg " alt="">
-                        <h4>2018 DigitalOcean, LLC. All rights reserved.</h4>
-                        <h4>Proudly made in NY</h4>
-                        <div class="social_list">
-                            <li><a href="#"><span><i class="fab fa-twitter"></i></span></a></li>
-                            <li><a href="#"><span><i class="fab fa-facebook-square"></i></span></a></li>
-                            <li><a href="#"><span><i class="fab fa-instagram"></i></span></a></li>
-                            <li><a href="#"><span><i class="fab fa-youtube"></i></span></a></li>
-                            <li><a href="#"><span><i class="fab fa-linkedin"></i></span></a></li>
+                        <h4 class="footer_list_color">2018 DigitalOcean, LLC. All rights reserved.</h4>
+                        <h5 class="footer_list_color pdg-10-t">Proudly made in NY</h5>
+                        <div class="social_list pdg-10-t">
+                            <li><a href="#"><span><i class="fab fa-twitter footer_list_color"></i></span></a></li>
+                            <li><a href="#"><span><i class="fab fa-facebook-square footer_list_color"></i></span></a></li>
+                            <li><a href="#"><span><i class="fab fa-instagram footer_list_color"></i></span></a></li>
+                            <li><a href="#"><span><i class="fab fa-youtube footer_list_color"></i></span></a></li>
+                            <li><a href="#"><span><i class="fab fa-linkedin footer_list_color"></i></span></a></li>
                         </div>
                     
                     </div>
