aggiungo testi originali

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
                             The simplest cloud platform for developers & team
                         </h1>
                         <p class="hero_p view_color_p">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ut consequuntur tempora mollitia cumque tempore expedita, pariatur voluptas natus error dolore dicta maxime. Quae culpa impedit, rem nesciunt laborum totam!
+                            Deploy, menage, and scale cloud applications faster and more efficiently on DigitalOcean.
+                            We make managing infrastructure easy for teams and businesses, whether you're running one virtual machine or ten thousand.
+
                         </p>
                     </div>
                     <div class="col-6 pdg-10">
@@ -89,10 +91,10 @@
                             <h3 class="view_color pdg-10">Get started now.</h3>
                             <form>
                                 <div class="form-group roboto">
-                                <input type="email"  placeholder="Name" class="form_lgr">
+                                <input type="email"  placeholder=" Name" class="form_lgr">
                                 </div>
                                 <div class="form-group roboto">
-                                <input type="password" class="form_lgr" id="exampleInputPassword1" placeholder="Password">
+                                <input type="password" class="form_lgr" id="exampleInputPassword1" placeholder=" Password">
                                 </div>
                                 <div class="form_btn roboto">
                                     <button type="submit" class="form_lgr bdg_btn_google white_txt centred"><a class="white_txt" href="#">Create your account</a></button>
@@ -162,7 +164,8 @@
                 Deploy and scale seamlessly
             </h2>
             <p class="pdg-20 container centred roboto view_color_all">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ducimus consequuntur sed dolorum nihil reprehenderit ad facilis, non placeat labore voluptates nemo, pariatur dolores eius molestiae quo nostrum sunt totam.
+                Our optimized configuration process saves your team time when running and scaling distributed applications, AI
+                & machine learning workloads, hosted services,client websites, or CI/CD enviroments.
             </p>
 
             <div class="deploy_container pdg-20 roboto">
@@ -182,29 +185,28 @@
                         <div class="deploy_container_top clearfix roboto">
                             <div class="deploy_container_top_left pdg-10-r">
                                 <img src="img/cluster-deploy.svg" alt="">
-                                <h3 class="pdg-20 view_color_all">Cluster deployments</h3>
-                                <p>Provision multiple Droplets virtual machines) in seconds 
+                                <h3 class="pdg-20 view_color_all text_left">Cluster deployments</h3>
+                                <p class="text_left">Provision multiple Droplets virtual machines) in seconds 
                                     with our control panel, CLI, or directly against our API</p>
                             </div>
                             <div class="deploy_container_top_right pdg-10-l roboto">
                                 <img src="img/optimized-compute.svg" alt="">
-                                <h3 class="pdg-20 view_color_all">One-click apps</h3>
-                                <p>Provision multiple Droplets virtual machines) in seconds 
-                                    with our control panel, CLI, or directly against our API</p>
+                                <h3 class="pdg-20 view_color_all text_left">One-click apps</h3>
+                                <p class="text_left">Get the compute resources you need with Standard or Optimized Droplets</p>
                             </div>
 
                         </div>
                         <div class="deploy_container_bottom clearfix pdg-20">
                             <div class="deploy_container_bottom_left pdg-10-r roboto">
                                 <img src="img/optimized-compute.svg" alt="">
-                                <h3 class="pdg-20 view_color_all">Cluster deployments</h3>
-                                <p>Get the compute resources you need with Standard or Optimized Droplets</p>
+                                <h3 class="pdg-20 view_color_all text_left">Cluster deployments</h3>
+                                <p class="text_left">Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker and more.</p>
                             </div>
 
                             <div class="deploy_container_bottom_right pdg-10-l roboto">
                                 <img src="img/global.svg" alt="">
-                                <h3 class="pdg-20 view_color_all">One-click apps</h3>
-                                <p>Deploy of any out data center regions around the world</p>
+                                <h3 class="pdg-20 view_color_all text_left">One-click apps</h3>
+                                <p class="text_left">Deploy of any out data center regions around the world</p>
                             </div>
                         </div>                 
                     </div>
@@ -222,8 +224,8 @@
             <h2 class="pdg-20 container centred view_color_all">
                 Designed for developers
             </h2>
-            <p class="pdg-30 container centred view_color_all">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ducimus consequuntur sed dolorum nihil reprehenderit ad facilis, non placeat labore voluptates nemo, pariatur dolores eius molestiae quo nostrum sunt totam.
+            <p class="pdg-30 container centred view_color_all p_size_20">
+                Build more and spend less time managing your infrastructure with our easy-to-use control panel and API
             </p>
 
             <div class="container">
@@ -246,7 +248,7 @@
                     
                 </div>
             </div>
-            <h3 class="centred view_color_all">Create compute servers in 55 seconds or less</h3>
+            <h3 class="centred view_color_all pdg-20">Create compute servers in 55 seconds or less</h3>
                 <div class="slider_click centred">
                     <div class="click_container">
                         <div class="click bgd_blue"><a href="#"></a></div>
@@ -269,22 +271,23 @@
                     <div class="col-4 pdg-10-r pdg-30">
                         <img src="img/pred-pricing.svg" alt="">
                         <h3 class="pdg-20 view_color_all">Predictable pricing</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia 
-                            illo veniam sint minima hic soluta corporis at dolore et molestiae?</p>
+                        <p>Leave complex procing structures behind.
+                            Always know you'll pay per month with a flat, industry-leading pricing structure.
+                        </p>
                         <h4><a class="view_color" href="#">Princing<i class="fas fa-chevron-right pdg-20"></i></a></h4>
                     </div>
                     <div class="col-4 pdg-10-r pdg-30">
                         <img src="img/world-class.svg" alt="">
                         <h3 class="pdg-20 view_color_all">Predictable pricing</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia 
-                            illo veniam sint minima hic soluta corporis at dolore et molestiae?</p>
+                        <p>Free round-the-clock technical support for all customers. You'll feel the love.</p>
                         <h4><a class="view_color" href="#">Support<i class="fas fa-chevron-right pdg-20"></i></a></h4>
                     </div>
                     <div class="col-4 pdg-10-r pdg-30">
                         <img src="img/reliable-platform.svg" alt="">
                         <h3 class="pdg-20 view_color_all">Reliable platform</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia 
-                            illo veniam sint minima hic soluta corporis at dolore et molestiae?</p>
+                        <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their
+                            business with a 99.99% uptime SLA for all services.
+                        </p>
                         <h4><a class="view_color" href="#">Security<i class="fas fa-chevron-right pdg-20"></i></a></h4>
                 </div>
 
@@ -314,22 +317,22 @@
                                 <a class="test_speed_link test_speed_color" href="#">Test speed <i class="fas fa-chevron-right "></i></a></h5>
                             </div>
                             <div class="col-3 border_row white_txt"><h5 class="centred pdg-10">AMS2</h5></div>
-                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">Amsterdam, Netherland</h5></div>
+                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">Bangalore, India</h5></div>
                             <div class="col-3 border_row"><h5 class="centred pdg-10">
                                 <a class="test_speed_link test_speed_color" href="#">Test speed <i class="fas fa-chevron-right "></i></a></h5>
                             </div>
                             <div class="col-3 border_row white_txt"><h5 class="centred pdg-10">AMS2</h5></div>
-                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">Amsterdam, Netherland</h5></div>
+                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">Frankfurt, German</h5></div>
                             <div class="col-3 border_row"><h5 class="centred pdg-10">
                                 <a class="test_speed_link test_speed_color" href="#">Test speed <i class="fas fa-chevron-right "></i></a></h5>
                             </div>
                             <div class="col-3 border_row white_txt"><h5 class="centred pdg-10">AMS2</h5></div>
-                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">Amsterdam, Netherland</h5></div>
+                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">London, UK</h5></div>
                             <div class="col-3 border_row"><h5 class="centred pdg-10">
                                 <a class="test_speed_link test_speed_color" href="#">Test speed <i class="fas fa-chevron-right "></i></a></h5>
                             </div>
                             <div class="col-3 border_row white_txt"><h5 class="centred pdg-10">AMS2</h5></div>
-                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">Amsterdam, Netherland</h5></div>
+                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">New York, USA</h5></div>
                             <div class="col-3 border_row"><h5 class="centred pdg-10">
                                 <a class="test_speed_link test_speed_color" href="#">Test speed <i class="fas fa-chevron-right "></i></a></h5>
                             </div>
@@ -350,22 +353,22 @@
                                 <a class="test_speed_link test_speed_color" href="#">Test speed <i class="fas fa-chevron-right "></i></a></h5>
                             </div>
                             <div class="col-3 border_row white_txt"><h5 class="centred pdg-10">AMS2</h5></div>
-                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">Amsterdam, Netherland</h5></div>
+                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">Bangalore, India</h5></div>
                             <div class="col-3 border_row"><h5 class="centred pdg-10">
                                 <a class="test_speed_link test_speed_color" href="#">Test speed <i class="fas fa-chevron-right "></i></a></h5>
                             </div>
                             <div class="col-3 border_row white_txt"><h5 class="centred pdg-10">AMS2</h5></div>
-                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">Amsterdam, Netherland</h5></div>
+                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">Frankfurt, German</h5></div>
                             <div class="col-3 border_row"><h5 class="centred pdg-10">
                                 <a class="test_speed_link test_speed_color" href="#">Test speed <i class="fas fa-chevron-right "></i></a></h5>
                             </div>
                             <div class="col-3 border_row white_txt"><h5 class="centred pdg-10 vertical">AMS2</h5></div>
-                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10 vertical">Amsterdam, Netherland</h5></div>
+                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10 vertical">London, UK</h5></div>
                             <div class="col-3 border_row"><h5 class="centred pdg-10">
                                 <a class="test_speed_link test_speed_color" href="#">Test speed <i class="fas fa-chevron-right "></i></a></h5>
                             </div>
                             <div class="col-3 border_row white_txt"><h5 class="centred pdg-10">AMS2</h5></div>
-                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">Amsterdam, Netherland</h5></div>
+                            <div class="col-6 border_row test_speed_city"> <h5 class="pdg-10">New York, USA</h5></div>
                             <div class="col-3 border_row"><h5 class="centred pdg-10">
                                 <a class="test_speed_link test_speed_color" href="#">Test speed <i class="fas fa-chevron-right "></i></a></h5>
                             </div>
