--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
 
         <!-- deploy -->
 
-        <section class="deploy pdg-20 container roboto">
-            <h2 class="pdg-20 container centred view_color_all">
+        <section class="deploy pdg-50 container roboto">
+            <h2 class="container centred view_color_all p_size_30">
                 Deploy and scale seamlessly
             </h2>
-            <p class="pdg-20 container centred roboto view_color_all">
+            <p class="pdg-10-t container centred roboto view_color_all p_size_20">
                 Our optimized configuration process saves your team time when running and scaling distributed applications, AI
                 & machine learning workloads, hosted services,client websites, or CI/CD enviroments.
             </p>
 
-            <div class="deploy_container pdg-20 roboto">
+            <div class="deploy_container pdg-50-t roboto">
                 <div class="row">
                     <div class="col-4 deploy_container_border_left margin-bottom">
 
@@ -224,13 +224,14 @@
             <h2 class="pdg-20 container centred view_color_all">
                 Designed for developers
             </h2>
-            <p class="pdg-30 container centred view_color_all p_size_20">
+            <p class="pdg-20 container centred view_color_all p_size_20">
                 Build more and spend less time managing your infrastructure with our easy-to-use control panel and API
             </p>
 
             <div class="container">
 
-                <div class="row centred slider">
+                <div class="row centred slider pdg-10-t {
+                    ">
         
                     <div class="col-2">
                         <div class="chevron_left">
@@ -262,7 +263,7 @@
 
         <section class="future pdg-20 roboto">
 
-            <h3 class="centred pdg-30 view_color_all">The features your business needs</h3>
+            <h2 class="centred pdg-30 view_color_all p_size_30">The features your business needs</h2>
 
             <div class="features_item container">
 
@@ -278,7 +279,7 @@
                     </div>
                     <div class="col-4 pdg-10-r pdg-30">
                         <img src="img/world-class.svg" alt="">
-                        <h3 class="pdg-20 view_color_all">Predictable pricing</h3>
+                        <h3 class="pdg-20 view_color_all">World-class</h3>
                         <p>Free round-the-clock technical support for all customers. You'll feel the love.</p>
                         <h4><a class="view_color" href="#">Support<i class="fas fa-chevron-right pdg-20"></i></a></h4>
                     </div>
@@ -297,9 +298,9 @@
 
         <!-- sezione test -->
 
-        <section class="test bgd_blue pdg-30 roboto">
+        <section class="test bgd_blue pdg-50 roboto">
 
-            <h2 class="centred bgd_blue white_txt">Service your customers around the world from 12 regions.</h2>
+            <h2 class="centred bgd_blue white_txt p_size_30">Service your customers around the world from 12 regions.</h2>
             <div class="container pdg-30">
 
                 <div class="row bgd_blue">
